--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,19 +16,10 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake
-        
-    - name: Create build directory
-      run: mkdir -p build
+        sudo apt-get install -y g++ make
 
-    - name: Configure CMake
-      working-directory: build
-      run: cmake ..
+    - name: Compile
+      run: g++ -o deathroll *.cpp
 
-    - name: Build
-      working-directory: build
-      run: cmake --build .
-
-    - name: Run tests
-      working-directory: build
-      run: ctest --output-on-failure
+    - name: Run program
+      run: ./deathroll
